coorect the TLS host for example domain

--- a/whoami-le.yaml
+++ b/whoami-le.yaml
@@ -40,7 +40,7 @@ spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`whoami.rahulsharma.page`)
+  - match: Host(`whoami.example.page`)
     kind: Rule
     services:
     - name: whoami
