--- a/traefik-values.yaml
+++ b/traefik-values.yaml
@@ -1,6 +1,6 @@
 additionalArguments:
   - "--log.level=DEBUG"
-  - "--certificatesresolvers.le.acme.email=someone@example.com"
+  - "--certificatesresolvers.le.acme.email=someone@example.page"
   - "--certificatesresolvers.le.acme.storage=/data/acme.json"
   - "--certificatesresolvers.le.acme.tlschallenge=true"
   - "--certificatesresolvers.le.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory"
