--- a/openssl.conf
+++ b/openssl.conf
@@ -1,7 +1,14 @@
-[req]
-prompt = no
+[ req ]
+default_bits       = 2048
 distinguished_name = req_distinguished_name
-
-[req_distinguished_name]
-CN = whoami.local
-emailAddress = contact@whoami.local
+req_extensions     = req_ext
+prompt = no
+[ req_distinguished_name  ]
+C = US
+ST = VA
+CN  = whoami.20.115.56.189.nip.io
+[ req_ext ]
+subjectAltName = @alt_names
+[ alt_names ]
+DNS.1 = whoami.20.115.56.189.nip.io
+DNS.2 = whoami.127.0.0.1.nip.io
