--- a/whoami-le.yaml
+++ b/whoami-le.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: whoami
+  namespace: dev
   labels:
     app: whoami
 spec:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: whoami
+  namespace: dev
 spec:
   ports:
   - name: whoami
@@ -33,17 +35,45 @@ spec:
     app: whoami
 ---
 apiVersion: traefik.containo.us/v1alpha1
+kind: TLSOption
+metadata:
+  name: tlsoptions
+  namespace: dev
+spec:
+  minVersion: VersionTLS12
+  cipherSuites:
+    - TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256
+    - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+    - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
+    - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+    - TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305
+    - TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
+    - TLS_AES_256_GCM_SHA384
+    - TLS_AES_128_GCM_SHA256
+    - TLS_CHACHA20_POLY1305_SHA256
+    - TLS_FALLBACK_SCSV
+  curvePreferences:
+    - CurveP521
+    - CurveP384
+  sniStrict: false
+---
+apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: whoami
+  namespace: dev
 spec:
   entryPoints:
     - websecure
   routes:
-  - match: Host(`whoami.example.page`)
-    kind: Rule
+  - kind: Rule
+    match: Host(`whoami.20.115.56.189.nip.io`)
     services:
     - name: whoami
       port: 80
   tls:
     certResolver: le
+    options:
+      name: tlsoptions
+      namespace: dev
