--- a/whoami.yaml
+++ b/whoami.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: whoami
+  namespace: dev
   labels:
     app: whoami
 spec:
@@ -24,6 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: whoami
+  namespace: dev
 spec:
   ports:
   - name: whoami
@@ -36,14 +38,13 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: whoami
+  namespace: dev
 spec:
   entryPoints:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`whoami.local`)
+    match: Host(`whoami.20.115.56.189.nip.io`)
     services:
     - name: whoami
       port: 80
-  tls:
-    secretName: whoami-secret
